# pcl_descriptors

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  baseball_0201.pcd  compute_all_descriptors.bash  compute_esf.cpp  compute_shot.cpp  keypoints_extraction.cpp  shot_test.cpp  test  test_icp.cpp  test_shot.csv
descriptors/tactile/filtered/: baseball0_cmesf.csv  baseball0_esf.csv  baseball0_shot.csv  baseball1_cmesf.csv  baseball1_esf.csv  baseball1_shot.csv  baseball2_cmesf.csv  baseball2_esf.csv  baseball2_shot.csv  beer0_cmesf.csv  beer0_esf.csv  beer0_shot.csv  beer1_cmesf.csv  beer1_esf.csv  beer1_shot.csv  beer2_cmesf.csv  beer2_esf.csv  beer2_shot.csv  camera_box0_cmesf.csv  camera_box0_esf.csv  camera_box0_shot.csv  camera_box1_cmesf.csv  camera_box1_esf.csv  camera_box1_shot.csv  camera_box2_cmesf.csv  camera_box2_esf.csv  camera_box2_shot.csv  golf_ball0_cmesf.csv  golf_ball0_esf.csv  golf_ball0_shot.csv  golf_ball1_cmesf.csv  golf_ball1_esf.csv  golf_ball1_shot.csv  golf_ball2_cmesf.csv  golf_ball2_esf.csv  golf_ball2_shot.csv  orange0_cmesf.csv  orange0_esf.csv  orange0_shot.csv  orange1_cmesf.csv  (+50 more)
python/: PointFilters.py  augment_vision.py  classifier.py  classifier_helpers.py  classifier_practice.py  compute_cmesf.py  convert_csv.py  create_joint_descriptor.py  create_tactile_exploration_datasets.py  csv_to_pcd.py  matrix.txt  pcd_to_csv.py
scripts/: compute_all_descriptors.bash  compute_dataset_descriptors.bash  compute_practice_descriptors.bash
src/: compute_esf.cpp  compute_fpfh.cpp  compute_shot.cpp  shot_test.cpp.old  voxel_MLS_filter.cpp
(+160 files in other folders)
